Remove dependency to javax.xml.bind.DatatypeConverter that makes artifactory analyser crashing on Java 11